dropshot/tests/fail/bad_channel17.stderr
error[E0277]: the trait bound `WebsocketConnection: SharedExtractor` is not satisfied
  --> tests/fail/bad_channel17.rs:18:17
   |
18 |     _upgraded1: WebsocketConnection,
   |                 ^^^^^^^^^^^^^^^^^^^ the trait `SharedExtractor` is not implemented for `WebsocketConnection`
   |
   = help: the following other types implement trait `SharedExtractor`:
             dropshot::Path<PathType>
             dropshot::Query<QueryType>
note: required by a bound in `need_shared_extractor`
  --> tests/fail/bad_channel17.rs:12:1
   |
12 | / #[channel {
13 | |     protocol = WEBSOCKETS,
14 | |     path = "/test",
15 | | }]
   | |__^ required by this bound in `need_shared_extractor`
...
18 |       _upgraded1: WebsocketConnection,
   |                   ------------------- required by a bound in this function
   = note: this error originates in the attribute macro `channel` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(RequestContext<()>, WebsocketConnection, WebsocketUpgrade) -> impl Future<Output = Result<http::response::Response<dropshot::Body>, HttpError>> {two_websocket_channels_adapter}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_channel17.rs:16:1
   |
12 | / #[channel {
13 | |     protocol = WEBSOCKETS,
14 | |     path = "/test",
15 | | }]
   | |__- required by a bound introduced by this call
16 |   async fn two_websocket_channels(
   |   ^^^^^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<()>, WebsocketConnection, WebsocketUpgrade) -> impl Future<Output = Result<http::response::Response<dropshot::Body>, HttpError>> {two_websocket_channels_adapter}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
